--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@types/react": "19.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.0.4",
+    "npm": "^10.9.2",
+    "postcss": "^8.4.49",
     "typescript": "^5.7.2"
   }
 }
