--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "next": "^15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.16",
     "typed.js": "^2.0.16"
   },
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@types/react": "19.0.1",
+    "@xpd/tailwind-3dtransforms": "^1.0.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.0.4",
