--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@radix-ui/react-context-menu": "2.2.4",
+    "@radix-ui/react-menubar": "1.1.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.13",
     "@vercel/edge-config": "^1.4.0",
