--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "dependencies": {
     "@radix-ui/react-context-menu": "2.2.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-menubar": "1.1.4",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.13",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@vercel/edge-config": "^1.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.575.0",
     "next": "15.0.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.0.16"
   },
   "scripts": {
