--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -3,14 +3,14 @@
     "title": "AI Enhanced Placement Module",
     "description": "An AI-powered placement management system that streamlines the campus recruitment process with intelligent matching and analytics.",
     "imgPath": "/projects/placement.jpg",
-    "link": "https://github.com/Yuvaraaj17/placement",
+    "envKey": "NEXT_PUBLIC_PROJECT_PLACEMENT_LINK",
     "tags": ["AI/ML", "Next.js", "Full Stack"]
   },
   {
     "title": "Smart Door Alert System",
     "description": "An IoT-based door monitoring system with real-time alerts and notifications for enhanced home security.",
     "imgPath": "/projects/door-alert.jpg",
-    "link": "https://github.com/Yuvaraaj17",
+    "envKey": "NEXT_PUBLIC_PROJECT_DOORALERT_LINK",
     "tags": ["IoT", "Embedded", "Real-time"]
   }
 ]
